add: auth middleware
