# src/backend/src/routes/index.ts
@@ -5,6 +5,6 @@ import { userRouter } from "./user.route";
 
 export const route = (app: Express) => {
   app.use("/api/auth", authRouter);
-  app.use("/api/user", userRouter);
+  app.use("/api/users", userRouter);
   app.use("/test", testRouter);
 };
