# src/backend/src/routes/swagger.yaml
@@ -65,6 +65,40 @@ paths:
         500:
           description: "Server Error"
 
+  # [GET] Get Users
+  /users:
+    get:
+      tags:
+        - users
+      summary: Get All Users
+      responses:
+        200:
+          description: "OK"
+          schema:
+            type: array
+            items:
+              $ref: "#/schemas/users"
+        500:
+          description: "Server Error"
+
+    post:
+      tags:
+        - users
+      summary: Create User
+      parameters:
+        - name: body
+          in: body
+          description: user Data to create
+          required: true
+          schema:
+            $ref: "#/schemas/users"
+      responses:
+        201:
+          description: "Created"
+        400:
+          description: "Bad Request"
+        500:
+          description: "Server Error"
   # [GET] Get User
   /users/{id}:
     get:
