# src/backend/src/routes/user.route.ts
@@ -1,9 +1,10 @@
 import { Router } from "express";
 import { UserController } from "../controllers";
+import { authMiddleware } from "../middleware/auth.middleware";
 
 export const userRouter = Router();
 const userController = new UserController();
-userRouter.get("/", userController.index);
+userRouter.get("/", authMiddleware, userController.index);
 userRouter.post("/", userController.create);
 userRouter.get("/:id", userController.getUser);
 userRouter.delete("/:id", userController.deleteUser);
